--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "jade-html-loader": "0.0.3",
+    "node-sass": "^4.5.2",
+    "pug": "^2.0.0-rc.1",
     "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.5",
     "scriptjs": "^2.5.8",
