--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "vue": "^2.3.3",
     "vue-resource": "^1.3.1",
     "webpack": "^2.5.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
